typescript/checker/tests/conformance/scanner/ecmascript3/scannerES3NumericLiteral6.ts.stderr
error: Expected a decimal digit
 --> $DIR/tests/conformance/scanner/ecmascript3/scannerES3NumericLiteral6.ts:1:4
  |
1 | 1e+
  |    ^

